--- a/src/content/posts/3.prisoner's dilemma.md
+++ b/src/content/posts/3.prisoner's dilemma.md
@@ -12,7 +12,7 @@ draft: false
 
 用博弈论的语言来说就是：如果无论其他参与者采取什么策略，某一种策略永远是一个参与者的可以采取的最佳策略，那么，这种策略被称为**占优策略（dominant strategy）**
 
-事实证明，当寡头在试图达到垄断结果时的博弈类似于两个处于囚徒困境的囚徒的博弈。*OPEC和世界石油市场，美苏军备竞赛，公共资源博弈*
+事实证明，当寡头在试图达到垄断结果时的博弈类似于两个处于囚徒困境的囚徒的博弈。*如OPEC和世界石油市场，美苏军备竞赛，公共资源博弈*
 
 ***囚徒困境表明合作是困难的，但合作也是可能的***。
 
