--- a/src/content/posts/5.替身.md
+++ b/src/content/posts/5.替身.md
@@ -1,14 +1,17 @@
 ---
-title: 生产要素市场
-published: 2022-07-01
-tags: [日常]
-category: 日常
+title: 替身
+published: 2024-04-12
+tags: [日常, 经济学]
+category: 经济学
 draft: false
 ---
 
-**替身**
+
 还是会再见的。
+
 日子是新日子，月色是旧月色。
+
 偶然你在路上走，
 行人一个接一个。
+
 你在谁的身上认出我。
